--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ license = "MIT"
 repository = "https://github.com/bschwind/yoga-rs"
 version = "0.1.1"
 authors = ["Brian Schwind <brianmschwind@gmail.com>"]
-build = "build.rs"
+# build = "build.rs"
 
 [build-dependencies]
 bindgen = "0.23.0"
